# giga-superset

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Taskfile.yml  pyproject.toml  superset_config.py
azure/: azure-pipelines-delete.yaml  azure-pipelines-dev.yaml  azure-pipelines-prd.yaml  azure-pipelines-stg.yaml  azure-pipelines.yaml  ingress-staging.yaml  ingress.yaml
azure/templates/: build-and-push.yaml  create-config.yaml  deploy.yaml  helm-deploy.yaml  variables.yaml  workflow.yaml
docs/: README.md  deployment.md
helm/: values-prd.yaml  values-staging.yaml  values-stg.yaml  values.yaml
k8s/: namespace.yaml
